--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
   	<!-- less -->
-  	<script src="less.js" type="text/javascript"></script>
+  	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
   	<!-- jQuery -->
   	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   </head>
