--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <body>
     <div class="img-cont"></div>
     <div class="container">
-      <h1 style="text-align: center; margin-top: 40%;">Welcome to PSX Guide!</h1>
+      <h1 style="text-align: center; margin-top: 40%;" class="splash-head">Welcome to PSX Guide!</h1>
+      <h3 style="text-align: center;" class="splash-head">Ready to get the most out of your copy of PSX?</h3>
+      <p style="text-align: center;"><a href="guides-home.html" class="btn btn-primary">See the guides</a></p>
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   </body>
